# mmpack

./: .gitignore  .gitmodules  3rdparty-python  CONTRIBUTING.md  Makefile.am  README.md  TODO.md  autoheader.yml  configure.ac  meson.build  meson_options.txt  project.config  requirements.txt
common-licenses/: MIT  meson.build
config/autotools-compat/: meson.build
data/: meson.build
debian/: rules  (+24 more)
devtools/: check-pyfile  codespell-ignore  convert-to-cstr.py  gerrit-mmpack-build.py  meson.build  mmpack-build-slave.sh  mmpack.supp  pkg-create-tests.sh  pylint-config  test-shell.sh  uncrustify.cfg
devtools/gerrit/: gerrit-mmpack-build.py  gerrit.py
docs/: .gitignore  bug.rst  conf.py  configuration.rst  creating-packages.rst  devdoc-conf.py  devguide.rst  faq.rst  gen-devdoc-mmpack.sh  getting-started.rst  index.rst  installation.rst  introduction.rst  meson.build  mmpack-build-builddep.rst.in  mmpack-build-clean.rst.in  mmpack-build-pkg-create.rst.in  mmpack-build.rst.in  mmpack-check-integrity.rst.in  mmpack-fix-broken.rst.in  mmpack-install.rst  mmpack-install.rst.in  mmpack-list.rst.in  mmpack-mkprefix.rst  mmpack-mkprefix.rst.in  mmpack-remove.rst  mmpack-remove.rst.in  mmpack-run.rst.in  mmpack-runprefix.rst  mmpack-runprefix.rst.in  mmpack-search.rst  mmpack-search.rst.in  mmpack-show.rst.in  mmpack-source.rst.in  mmpack-update.rst  mmpack-update.rst.in  mmpack-upgrade.rst.in  mmpack.rst  mmpack.rst.in  usage.rst  (+1 more)
docs/man/: mmpack-autoremove.rst  mmpack-build-builddep.rst  mmpack-build-clean.rst  mmpack-build-guess.rst  mmpack-build-pkg-create.rst  mmpack-build.rst  mmpack-check-integrity.rst  mmpack-download.rst  mmpack-fix-broken.rst  mmpack-install.rst  mmpack-list.rst  mmpack-mkprefix.rst  mmpack-rdepends.rst  mmpack-remove.rst  mmpack-repo.rst  mmpack-run.rst  mmpack-search.rst  mmpack-show.rst  mmpack-source.rst  mmpack-update.rst  mmpack-upgrade.rst  mmpack.rst
docs/specs/: build-scripts.rst  package-creation.md  package-install.md  package-management-workflow.md  package-sources-strap.rst  package-specfile.md  package-specfile.rst  package-src-build-hooks.rst  package-structure.md  repo-index.md  repo.rst  source-build-tracing.md  specfile-sample.yaml
src/: .gitignore  Makefile.am  action-solver.c  action-solver.h  binary-index.c  binary-index.h  binary_package.py  build-autotools  build-cmake  build-makefile  build-python  common.h  common.py  context.c  context.h  dependencies.py  download.c  download.h  dpkg.py  elf_utils.py  file_utils.py  hash-utils.c  hash-utils.h  indextable.c  indextable.h  mm-alloc.h  mm_version.py  mmpack-build  mmpack-build.in  mmpack-check-integrity.c  mmpack-common.c  mmpack-common.h  mmpack-config  mmpack-config.c  mmpack-config.h  mmpack-config.py  mmpack-config.yml  mmpack-context.c  mmpack-context.h  mmpack-install.c  (+53 more)
src/ci-builder/: builder.py  buildjob.py  ci_builder.py  common.py  eventsrc-gerrit.py  eventsrc.py  eventsrc_gerrit.py  gerrit.py  jobqueue.py  main.py  meson.build  mmpack-build-slave.sh
src/mmpack/: action-solver.c  action-solver.h  binindex.c  binindex.h  binpkg.c  binpkg.h  buffer.c  buffer.h  check-dpkg-installed  cmdline.c  cmdline.h  common.h  constraints.h  context.c  context.h  crypto.c  crypto.h  download.c  download.h  exec-in-prefix.h  hashset.c  hashset.h  indextable.c  indextable.h  install-state.c  install-state.h  manually_installed.c  manually_installed.h  meson.build  mm-alloc.h  mmpack-autoremove.c  mmpack-autoremove.h  mmpack-check-integrity.c  mmpack-check-integrity.h  mmpack-check-sysdep.c  mmpack-check-sysdep.h  mmpack-download.c  mmpack-download.h  mmpack-fix-broken.c  mmpack-fix-broken.h  (+64 more)
src/mmpack-build/: .gitignore  __init__.py  __main__.py  _argcomplete.py  base_hook.py  binary_package.py  build-autotools  build-cmake  build-ghost-deb  build-makefile  build-meson  build-python  common.py  decorators.py  dpkg.py  elf_utils.py  errors.py  file_utils.py  hook_locales.py  hook_python.py  hook_sharedlib.py  hooks_loader.py  meson.build  mm_version.py  mmpack-build  mmpack-build.in  mmpack-build_completion  mmpack_builddep.py  mmpack_clean.py  mmpack_config.py  mmpack_create.py  mmpack_create_with_repos.py  mmpack_guess.py  mmpack_mksource.py  mmpack_pkg_check.py  mmpack_pkg_create.py  mmpack_pkg_show.py  package_info.py  pacman.py  pe_utils.py  (+18 more)
src/mmpack_build/: __init__.py  __main__.py  base_hook.py  binary_package.py  builddeps_guess.py  common.py  elf_utils.py  errors.py  file_utils.py  hook_locales.py  hook_python.py  hooks_loader.py  meson.build  mm_version.py  mmpack-build.in  mmpack_builddep.py  mmpack_clean.py  mmpack_guess.py  mmpack_mksource.py  package_info.py  pe_utils.py  prefix.py  provide.py  source_strap_specs.py  source_tarball.py  src_package.py  syspkg_manager.py  syspkg_manager_base.py  syspkg_manager_dpkg.py  workspace.py  xdg.py  yaml_dumper.py
src/pyscripts/: __init__.py  __main__.py  depends.py  dispatch.py  meson.build  provides.py  utils.py
src/repository/: Repo.py  Repo.rst  __main__.py  meson.build  mmpack-createrepo  mmpack-db.py  mmpack-modifyrepo.py.in  mmpack-repo.py.in  mmpack_handle_repo.py.in  parse_manifest.py  repo.py  server.py  server_upload.py.in
tests/: .gitignore  Makefile.am  binindex_test.c  config_test.c  create-mpks  create-test-pkg.sh  create-test-repo.sh  create-test-sysrepo.sh  dependencies_test.c  do-deployment-test.py  hash_test.c  hashset_test.c  indextable_test.c  meson.build  misc_test.c  mmpack-config.yaml  prefix-list_test.c  pytests.py  python-unittests.tap  run-test-mpkrepo  sha_test.c  srcindex_test.c  test_common.py  test_file_utils.py  test_guess.py  test_hook_python.py  test_package.py  test_readme_parsing.py  test_version.py  testcases.h  unittests.c  version_test.c
tests/binary-indexes/: circular.yaml  dependency-issue.yaml  installed-simple.yaml  simple.yaml  simplest.yaml  unsolvable-dependencies.yaml
tests/pydata/: bare.py  launcher
tests/smoke-test/: Makefile.am  configure.ac  hello-world.c  libhello.c  meson.build
tests/smoke-tests/: create_package_hello.sh  launch_test_mmpack-build_autotools.sh  (+20 more)
(+131 files in other folders)
